@@ -1,1 +1,2 @@
-export const ENDPOINT_IMGS_LIST = "https://picsum.photos/v2/list?limit=100";
+export const ENDPOINT_IMGS_LIST = "https://picsum.photos/v2/list";
+export const ENDPOINT_IMG_BASE = "https://picsum.photos/id";
